cpapps/cpapp1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpapp1
  labels:
    environment: development
    owner: "CharlesPeterJoseph"
  annotations:
    description: "CP Apps Development"
    contact: "charlesjpeter@gmail.com"
