cpapps/cpapp1/dep1_app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpapp1B
  namespace: cpapp1
  labels:
    app: cpapp1B
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpapp1B
  template:
    metadata:
      labels:
        app: cpapp1B
    spec:
      containers:
        - name: frontend
          image: nginx:latest
          ports:
            - containerPort: 80
