cpapps/cpapp1/svc1_app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc1A
  namespace: cpapp1
  labels:
    app: svc1A
spec:
  selector:
    app: cpapp1A
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
