cpapps/cpapp1/svc1_app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc1B
  namespace: cpapp1
  labels:
    app: svc1B
spec:
  selector:
    app: cpapp1B
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
